# ChangeLog for dev-ruby/rake-compiler
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rake-compiler/ChangeLog,v 1.81 2014/07/25 12:42:00 mrueg Exp $

  25 Jul 2014; Manuel Rüger <mrueg@gentoo.org> -rake-compiler-0.8.3.ebuild:
  Cleanup old.

  21 Jul 2014; Tobias Klausmann <klausman@gentoo.org>
  rake-compiler-0.9.2.ebuild:
  Stable on alpha, bug #505920

  14 Jul 2014; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  rake-compiler-0.9.2.ebuild:
  x86 stable wrt bug #505920

  13 Jun 2014; Jeroen Roovers <jer@gentoo.org> rake-compiler-0.9.2.ebuild:
  Stable for HPPA (bug #510334).

  08 Jun 2014; Akinori Hattori <hattya@gentoo.org> rake-compiler-0.9.2.ebuild:
  ia64 stable wrt bug #505920

  01 Jun 2014; Markus Meier <maekke@gentoo.org> rake-compiler-0.9.2.ebuild:
  arm stable, bug #505920

*rake-compiler-0.9.2-r1 (27 Apr 2014)

  27 Apr 2014; Manuel Rüger <mrueg@gentoo.org> +rake-compiler-0.9.2-r1.ebuild,
  -rake-compiler-0.9.1.ebuild, rake-compiler-0.9.2.ebuild:
  Move ruby21 to -r1. Cleanup old.

  27 Apr 2014; Jeroen Roovers <jer@gentoo.org> rake-compiler-0.9.1.ebuild:
  Marked ~hppa (bug #508826).

  26 Apr 2014; Jeroen Roovers <jer@gentoo.org> rake-compiler-0.9.1.ebuild:
  Stable for HPPA (bug #508416).

  05 Apr 2014; Manuel Rüger <mrueg@gentoo.org> -rake-compiler-0.8.1-r1.ebuild,
  rake-compiler-0.8.1.ebuild, rake-compiler-0.8.3.ebuild,
  rake-compiler-0.9.1.ebuild, rake-compiler-0.9.2.ebuild:
  Remove ree18 and ruby18 target.

  02 Apr 2014; Markus Meier <maekke@gentoo.org> rake-compiler-0.8.3.ebuild:
  arm stable, bug #506292

  02 Apr 2014; Jeroen Roovers <jer@gentoo.org> rake-compiler-0.8.3.ebuild:
  Stable for HPPA (bug #506292).

  21 Mar 2014; Hans de Graaff <graaff@gentoo.org> rake-compiler-0.9.2.ebuild:
  Add ruby21 and skip tests for it to bootstrap rspec. Remove ruby18.

  02 Jan 2014; Hans de Graaff <graaff@gentoo.org> rake-compiler-0.8.1.ebuild,