@@ -1,7 +1,19 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST rake-compiler-0.8.1.tar.gz 28619 SHA256 c066b94c49c6501a9dae7a7c89620e64f06f24e3416c899b81a1484087701962 SHA512 bf04a9840e7c5d1239f3d98eac86eb38915c5271b5ec5a96d5a49702c08296c54a1738b48ca26cf0821030a5f224128b49736decbbc86c5d71e8f228833052d5 WHIRLPOOL 3be69e614a563ccee84f27a37e9bf191fd328691553846b79188bda806a88bd3d80d4776448b78d999f2c09ae364001964381815f32e5b14732efd831546bec0
 DIST rake-compiler-0.9.2.tar.gz 30778 SHA256 72ced9a0ca9a034506de279e888fdec63d542d788ee1d2e7910f1bfd71c82dd3 SHA512 883157bf44540cd021bec22a84e907922756f74a61e84c62e51eed752da01d217a03aebd88582fbe779210116e7ab1a36023707fbdae445b5ac4499c7de9b8eb WHIRLPOOL 79b21689e08ac21005243a2f18bde0941c3a86bdd3bf36bf557d3c706cb64fcb379f2d3fd06c93d3c07f10e8c1e47c75933ba783cc23b57137d9fce6c3e7de78
+DIST rake-compiler-0.9.3.tar.gz 30886 SHA256 5a1a16b4d0551285d4de8f307f83080004b2a63d62303acbb60518b3194180e9 SHA512 6b720bd52a2e2de1421a95ba9c45f1d26b771f8ed671468588967a26bf531796025c643143d641941108913ef12cc09b7eb240b287db3ce3d7fc9d38eedbb769 WHIRLPOOL 52869ed8e7ec9db6a5ca2023ee4966a0079835a2f9e4a90d2dd5ea804080fab0e0c1336cc6c2cb2a6bd5f20894e68459310ff5ca28376be9e6fbef0b4af90c7e
 EBUILD rake-compiler-0.8.1.ebuild 1754 SHA256 87b185964bb9fb8f8f324a80df363f63683b48c551272721fa41c1a52d49de85 SHA512 c9e6599b1d12712845dd98b5ad3c252987d7fb2243441336fcb322b8970c029243a897727d0ef9703648a881fc82c8885ad158213429d55d590a9183458d989b WHIRLPOOL f8b64aec9c191b10fc613d63b2ad0aa5ff9f108cf2d80fe17c219128be5ae450358f00ab06f79f2c3576692e986fa20fa90b844ee9f86cc447e59d5c8b2ebf76
 EBUILD rake-compiler-0.9.2-r1.ebuild 1716 SHA256 266ad299a3eb15e125791691419d608efe46921b1e41af2c54df883d6326dfd3 SHA512 5dde197c458b089dbd1bea8b2a2e4e8eabc3780872dc8db373b23bf482d685095d26872d796d99c7fdb9917fbd67f33a868225e85d152c143837c4e0a45379b1 WHIRLPOOL 586c9400e5e7e4c2c53270a16b54d63cf24cbcbba332e655b03992586df1dbe76bcc4b8a7eb3c6f4d722cc14942d72c78f765104ab6a4bc328afa09a8cc064e1
 EBUILD rake-compiler-0.9.2.ebuild 1705 SHA256 c967372645aa2c476cf1492624ba29adf74610a0a358a059ba951441e7ba1314 SHA512 e2435948f9221e76acd696eb5766345d4a73eb1401e26b73e976685e928addeb04341561983793abe825ef95d7a7bdbf0060960a7a8dde418160bab18b43ebda WHIRLPOOL 957f3bbe911d5ff127c754be39db4fe4ccae438a8ba359a98dade2ec780f6fd9efe5e4f338864e274325ec2f9cc69ea8a67c4e054e6beb30d9c289710ff764bb
-MISC ChangeLog 11311 SHA256 545ba32d6c09d705159fd88d115fb6772dad1d659a9ce6b263178eda49ca1f3e SHA512 21a0e04d7218df568361c75298eb82dcfd5b246b46c8ed1ddd50740103da37ae1290c31678c2128b75a107341dae3ac657ca95ef51e9d722465e8bedcfa4f034 WHIRLPOOL bd24ab3ea289bdcd035b1a868efd6f21b5ff8097bfb8dc2335b11cc2d5c30245002c30b336a4411ee80efbce6c31b6406927e8578c6115ce9d7865ee299d3302
+EBUILD rake-compiler-0.9.3.ebuild 1582 SHA256 d45667d0e97371ea0a3b656775410fd08473d06ccb261958d23a19aaac199140 SHA512 fd5d388643f30907d56aa4aed4e963e94818ab8c21f4bab26bcee1fe5da7127ba224af61f2f9668a64bafdc48efa548acca7dcd84a9bce318c2603c18e56ba17 WHIRLPOOL ee54ea2bd6080677f929b53381896801c2e2b4ae45ee5f0264699117a66dd14fc5d6ac3b54d8f6c2ea159df1413099fc9b23266cb566ba475d52c642ed9d2d5c
+MISC ChangeLog 11555 SHA256 8b000407dd5154d47b06bcdec3c1321bdc3f5634fe0a652bcf3c785dd7e19764 SHA512 545e6870da028904f6ff3d1f076c91d281c3156f3695513381cb54980be658199163da259e3ac0a3fa9ca8e633a94ffa87a7ee6aa05844c8ad3e369d22faf7e0 WHIRLPOOL edcd2d33fabf94db5e10ff35a2f30f4b1027255a17a95cb32f5629f16a362b249117caf5e68ac8db3d2f7ac10e1a81ab789763a1e126c7534204a46200935767
 MISC metadata.xml 157 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c SHA512 0cec73b966de88015ea4c7212723d848d367608aa93658bb945f298a8000c4ba8aba73c9eb8481859fb5bbed45e80dae32c628caf81e027a4ad8eafa7e632851 WHIRLPOOL 4da25c81e21173ad8b7b5f35b056264869d9a16741062aa4422c5ea1aa9e73da8eb700b0d54de84c169d702fbb3f41ed157c9dc7c9daac110849ae84715c051b
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2
+
+iF4EAREIAAYFAlPgYPgACgkQiIP6VqMIqNfQDQD+Mxz9U7fA4AXQoa6hE1q7F1se
+Dbxkd9jzunn+22CHjqoA/1Qyjt0OJ2Aozibdn6I8zC7zNUEpjFSwCAxWFhSf+TuF
+=Bas8
+-----END PGP SIGNATURE-----
