@@ -1,6 +1,12 @@
 # ChangeLog for dev-ruby/rake-compiler
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rake-compiler/ChangeLog,v 1.81 2014/07/25 12:42:00 mrueg Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rake-compiler/ChangeLog,v 1.82 2014/08/05 04:43:29 graaff Exp $
+
+*rake-compiler-0.9.3 (05 Aug 2014)
+
+  05 Aug 2014; Hans de Graaff <graaff@gentoo.org> +rake-compiler-0.9.3.ebuild:
+  Version bump. Enable specs and feature tests for more ruby targets. Drop
+  sparc keyword as a consequence of it, bug 465948.
 
   25 Jul 2014; Manuel Rüger <mrueg@gentoo.org> -rake-compiler-0.8.3.ebuild:
   Cleanup old.
